# glcppquickstart

./: CMakeLists.txt  readme.md
glad/: glad.c
glad/include/glad/: glad.h
main/: main.cpp
